--- a/src/Polyglot.Interactive.Tests/Polyglot.Interactive.Tests.csproj
+++ b/src/Polyglot.Interactive.Tests/Polyglot.Interactive.Tests.csproj
@@ -1,8 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <IsPackable>false</IsPackable>
+	  <TargetFramework>net6.0</TargetFramework>
+	  <OutputType>Library</OutputType>
+	  <RepositoryUrl>https://github.com/polyglot-edu/runtime</RepositoryUrl>
+	  <PackageProjectUrl>https://github.com/polyglot-edu/runtime</PackageProjectUrl>
+	  <AnalysisLevel>latest-all</AnalysisLevel>
+	  <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
