--- a/src/Polyglot.Gamification/Polyglot.Gamification.csproj
+++ b/src/Polyglot.Gamification/Polyglot.Gamification.csproj
@@ -3,20 +3,17 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <OutputType>Library</OutputType>
-    <RepositoryUrl>https://github.com/antbucc/POLYGLOT</RepositoryUrl>
-    <PackageProjectUrl>https://github.com/antbucc/POLYGLOT</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/polyglot-edu/runtime</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/polyglot-edu/runtime</PackageProjectUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <IsPackable>true</IsPackable>
-    <Version>1.0.3</Version>
+    <AnalysisLevel>latest-all</AnalysisLevel>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Extensions" Version="2.2.0" />
     <PackageReference Include="Microsoft.DotNet.Interactive" Version="1.0.0-beta.22175.2" />
     <PackageReference Include="Microsoft.DotNet.Interactive.CSharp" Version="1.0.0-beta.22175.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Polyglot.Core\Polyglot.Gamification.csproj" />
   </ItemGroup>
 
 </Project>
