--- a/src/Polyglot.Interactive.SysML/Polyglot.Interactive.SysML.csproj
+++ b/src/Polyglot.Interactive.SysML/Polyglot.Interactive.SysML.csproj
@@ -10,6 +10,10 @@
 	  <AnalysisLevel>latest-all</AnalysisLevel>
   </PropertyGroup>
 
+	<ItemGroup>
+		<None Include="$(OutputPath)/Polyglot.Interactive.SysML.dll" Pack="true" PackagePath="interactive-extensions/dotnet" />
+	</ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.DotNet.Interactive" Version="1.0.0-beta.22175.2" />
     <PackageReference Include="StreamJsonRpc" Version="2.8.28" />
