--- a/src/Polyglot.Metrics.CSharp/Polyglot.Metrics.CSharp.csproj
+++ b/src/Polyglot.Metrics.CSharp/Polyglot.Metrics.CSharp.csproj
@@ -16,6 +16,10 @@
   </ItemGroup>
 
   <ItemGroup>
+	<None Include="..\..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Polyglot.Gamification\Polyglot.Gamification.csproj" />
   </ItemGroup>
 
