--- a/src/Polyglot.Interactive.SysML/Polyglot.Interactive.SysML.csproj
+++ b/src/Polyglot.Interactive.SysML/Polyglot.Interactive.SysML.csproj
@@ -11,7 +11,8 @@
   </PropertyGroup>
 
 	<ItemGroup>
-		<None Include="$(OutputPath)/Polyglot.Interactive.SysML.dll" Pack="true" PackagePath="interactive-extensions/dotnet" />
+	  <None Include="$(OutputPath)/Polyglot.Interactive.SysML.dll" Pack="true" PackagePath="interactive-extensions/dotnet" />
+      <None Include="..\..\.editorconfig" Link=".editorconfig" />
 	</ItemGroup>
 
   <ItemGroup>
