--- a/src/Polyglot.Metrics.SysML/Polyglot.Metrics.SysML.csproj
+++ b/src/Polyglot.Metrics.SysML/Polyglot.Metrics.SysML.csproj
@@ -11,6 +11,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+	<None Include="..\..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Polyglot.Interactive.SysML\Polyglot.Interactive.SysML.csproj" />
   </ItemGroup>
 
