update to latest .net interactive
update to latest .net interactive

--- a/src/Polyglot.Gamification/Polyglot.Gamification.csproj
+++ b/src/Polyglot.Gamification/Polyglot.Gamification.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -16,8 +16,8 @@
 	
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http.Extensions" Version="2.2.0" />
-    <PackageReference Include="Microsoft.DotNet.Interactive" Version="1.0.0-beta.22175.2" />
-    <PackageReference Include="Microsoft.DotNet.Interactive.CSharp" Version="1.0.0-beta.22175.2" />
+    <PackageReference Include="Microsoft.DotNet.Interactive" Version="1.0.0-beta.22256.1" />
+    <PackageReference Include="Microsoft.DotNet.Interactive.Journey" Version="1.0.0-beta.22256.1" />
   </ItemGroup>
 
 </Project>
