--- a/src/Polyglot.Interactive/Polyglot.Interactive.csproj
+++ b/src/Polyglot.Interactive/Polyglot.Interactive.csproj
@@ -11,7 +11,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.DotNet.Interactive" Version="1.0.0-beta.22175.2" />
+    <PackageReference Include="Microsoft.DotNet.Interactive" Version="1.0.0-beta.22256.1" />
+	<PackageReference Include="Microsoft.DotNet.Interactive.Journey" Version="1.0.0-beta.22256.1" />
   </ItemGroup>
 
   <ItemGroup>
