--- a/src/Polyglot.Gamification/Polyglot.Gamification.csproj
+++ b/src/Polyglot.Gamification/Polyglot.Gamification.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Http.Extensions" Version="2.2.0" />
     <PackageReference Include="Microsoft.DotNet.Interactive" Version="1.0.0-beta.22256.1" />
     <PackageReference Include="Microsoft.DotNet.Interactive.Journey" Version="1.0.0-beta.22256.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
 </Project>
