--- a/src/Polyglot.Gamification/Polyglot.Gamification.csproj
+++ b/src/Polyglot.Gamification/Polyglot.Gamification.csproj
@@ -20,5 +20,9 @@
     <PackageReference Include="Microsoft.DotNet.Interactive.Journey" Version="1.0.0-beta.22504.6" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
+	
+  <ItemGroup>
+    <ProjectReference Include="..\Polyglot.Metrics.SysML\Polyglot.Metrics.SysML.csproj" />
+  </ItemGroup>
 
 </Project>
