--- a/src/Polyglot.Metrics.SysML/Polyglot.Metrics.SysML.csproj
+++ b/src/Polyglot.Metrics.SysML/Polyglot.Metrics.SysML.csproj
@@ -1,12 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	  <TargetFramework>net6.0</TargetFramework>
+	  <TargetFramework>net7.0</TargetFramework>
 	  <OutputType>Library</OutputType>
 	  <RepositoryUrl>https://github.com/polyglot-edu/runtime</RepositoryUrl>
 	  <PackageProjectUrl>https://github.com/polyglot-edu/runtime</PackageProjectUrl>
 	  <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 	  <IsPackable>true</IsPackable>
+	  <PackageLicenseExpression>MIT</PackageLicenseExpression>
 	  <AnalysisLevel>latest-all</AnalysisLevel>
   </PropertyGroup>
 
